# openai-rag-chatbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  ruff.toml
.github/workflows/: cicd.yml
data/: laser_eye_surgery_complications.csv
src/: config.py  helpers.py  main.py  populate_vector_db.py  server.py
